--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -1,6 +1,8 @@
 // Images
 
 .img {
+  //Logo Image
+
   @include m(logo) {
     @extend %centered;
     padding-top: em(75px);
@@ -12,11 +14,21 @@
     }
   }
 
+  //Avatar Image
+
   @include m(avatar) {
     @extend %centered;
     padding-top: em(35px);
     padding-bottom: em(35px);
+
+    @include mq(medium) {
+      width: auto;
+      margin-left: $marg-x-lg;
+      padding-top: em(18px);
+    }
   }
+
+  // Frame Image
 
   @include m(frame) {
     @extend %centered;
