--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -119,3 +119,4 @@ $marg-x-sm      : 6px;
 $marg-sm        : 15px;
 $marg-md        : 50px;
 $marg-lg        : 100px;
+$marg-x-lg      : 200px;
